--- a/src/demo/Client/App/Components/site-root.html
+++ b/src/demo/Client/App/Components/site-root.html
@@ -3,7 +3,7 @@
   <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
     ☰
   </button>
-  <a class="navbar-brand" href="/index.html"><img src="/assets/img/roche.png" style="width:33%" /></a>
+  <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo.png" style="width:33%" /></a>
   <site-nav></site-nav>
 </nav>
 <div class="container-fluid" id="main">
@@ -21,7 +21,7 @@
       <h2 class="display-2 hidden-xs-down">
         {{ currentRoute.title }} <small>{{ currentRoute.subTitle }}</small>
       </h2>
-      <p class="lead">Welcome to CaevMan v4</p>
+      <p class="lead">Welcome to SVOGV &ndash; the 'Simple Validation and Other Great View components' library</p>
       <!-- Global navigation path -->
       <ac-breadcrumb></ac-breadcrumb>
       <!-- the global outlet, within the parts the named tab outlet shows sub parts -->
@@ -32,5 +32,5 @@
 </div>
 <!--/.container-->
 <footer class="container-fluid">
-  <p class="text-right small">&copy; 2015 - {{ currentYear }} Roche</p>
+  <p class="text-right small">&copy; 2011 - {{ currentYear }} Augmented Content / Joerg &lt;isageek&gt; Krause</p>
 </footer>
