--- a/src/demo/Client/App/Components/app-dashboard.html
+++ b/src/demo/Client/App/Components/app-dashboard.html
@@ -1,46 +1,54 @@
 ﻿<div class="row">
-  <div class="col-lg-3 col-md-6">
-    <div class="card card-inverse card-success">
-      <div class="card-block bg-success">
-        <div class="rotate">
-          <i class="fa fa-user fa-5x"></i>
-        </div>
-        <h6 class="text-uppercase">Studies</h6>
-        <h1 class="display-1">{{ studies.length }}</h1>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6">
-    <div class="card card-inverse card-danger">
-      <div class="card-block bg-danger">
-        <div class="rotate">
-          <i class="fa fa-list fa-4x"></i>
-        </div>
-        <h6 class="text-uppercase">Users</h6>
-        <h1 class="display-1">{{ users.length }}</h1>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6">
-    <div class="card card-inverse card-info">
-      <div class="card-block bg-info">
-        <div class="rotate">
-          <i class="fa fa-twitter fa-5x"></i>
-        </div>
-        <h6 class="text-uppercase">Experiments</h6>
-        <h1 class="display-1">125</h1>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6">
-    <div class="card card-inverse card-warning">
-      <div class="card-block bg-warning">
-        <div class="rotate">
-          <i class="fa fa-share fa-5x"></i>
-        </div>
-        <h6 class="text-uppercase">Reports</h6>
-        <h1 class="display-1">36</h1>
-      </div>
-    </div>
-  </div>
+	<div class="col-lg-3 col-md-6">
+		<div class="card card-inverse card-success">
+			<div class="card-block bg-success">
+				<div class="rotate">
+					<i class="fa fa-user fa-5x"></i>
+				</div>
+				<h6 class="text-uppercase">Tiles</h6>
+				<h1 class="display-1">123</h1>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3 col-md-6">
+		<div class="card card-inverse card-danger">
+			<div class="card-block bg-danger">
+				<div class="rotate">
+					<i class="fa fa-list fa-4x"></i>
+				</div>
+				<h6 class="text-uppercase">Users</h6>
+				<h1 class="display-1">{{ users.length }}</h1>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3 col-md-6">
+		<div class="card card-inverse card-info">
+			<div class="card-block bg-info">
+				<div class="rotate">
+					<i class="fa fa-twitter fa-5x"></i>
+				</div>
+				<h6 class="text-uppercase">Experiments</h6>
+				<h1 class="display-1">125</h1>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3 col-md-6">
+		<div class="card card-inverse card-warning">
+			<div class="card-block bg-warning">
+				<ac-analogclock></ac-analogclock>
+				<h6 class="text-uppercase">Analog Clock</h6>
+				<h1 class="display-1">Use like this</h1>
+				<pre>
+					&lt;c-analogclock>&lt;/ac-analogclock>
+				</pre>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3 col-md-6">
+		<h3>Tree View</h3>
+		<pre>
+			&lt;ac-treeview [nodes]="treeData">&lt;/ac-treeview>
+		</pre>
+		<ac-tree [nodes]="treeData"></ac-tree>
+	</div>
 </div>
