Bugfixing Sidemenu, Reorg Widget Components

--- a/src/demo/Client/App/Components/site-about.html
+++ b/src/demo/Client/App/Components/site-about.html
@@ -1,2 +1,14 @@
-﻿<p class="display-4">Ein Pionier in der Gesundheitsfürsorge
-Seit Gründung des Unternehmens im Jahr 1896 in Basel (Schweiz) steht der Name Roche für Pharmazeutika. Heute entwickeln und vertreiben wir innovative Arzneimittel und Diagnostika, die weltweit Millionen Patienten helfen.</p>
+﻿<div class="alert alert-info">
+    SVOGV is a ongoing project that helps Angular2 developers to create awsome apps quite fast.
+</div>
+<h3>Objections</h3>
+<p>This project consists of several parts that can be used independently:</p>
+<ol>
+    <li>A validation solution to automate form creation, based on decorators and editors</li>
+    <li>A widget library for components that use Bootstrap 4 as layout foundation</li>
+    <li>A widgert library based on SVG with some very special components</li>
+    <li>A HUD widget library for buildung sci-fi designs, mostly SVG based</li>
+</ol> 
+<p>So, stay tuned!</p>
+<h3>Licensing</h3>
+<p>Everything is Open Sourced. For enterprises we sell additional licenses that help convincing your boss.</p>
