--- a/src/demo/Client/App/Components/site-nav.html
+++ b/src/demo/Client/App/Components/site-nav.html
@@ -5,7 +5,7 @@
       <a class="nav-link" href="#" [routerLink]="['/dashboard']">Home <span class="sr-only">Home</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#" [routerLink]="['/users']">User</a>
+      <a class="nav-link" href="#" [routerLink]="['/editor']">Editor Demo</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#" [routerLink]="['/about']">About</a>
