--- a/src/demo/Client/App/Components/site-root.html
+++ b/src/demo/Client/App/Components/site-root.html
@@ -3,7 +3,7 @@
   <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
     ☰
   </button>
-  <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo.png" style="width:33%" /></a>
+  <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo.png" /></a>
   <site-nav></site-nav>
 </nav>
 <div class="container-fluid" id="main">
