--- a/src/demo/Client/App/Components/editor/new.html
+++ b/src/demo/Client/App/Components/editor/new.html
@@ -1,3 +1,27 @@
-<div class="alert alert-info">
-  <h3>New User</h3>
+<div class="container-fluid">
+  <form (ngSubmit)="saveUser()" [formGroup]="userForm" role="form" class="row">
+    <fieldset>
+      <legend>Add new User</legend>
+      <ac-editor [userForm]="userForm" [name]="'userName'" ></ac-editor>
+      <ac-editor [userForm]="userForm" [name]="'email'" ></ac-editor>
+      <ac-editor [userForm]="userForm" [name]="'phoneNumber'" ></ac-editor>
+      <div class="row">
+        <button class="btn btn-sm btn-success" type="submit" [disabled]="!userForm.valid">
+          <i class="fa fa-save"></i> Save
+        </button>
+        <button class="btn btn-sm btn-secondary" type="submit" [disabled]="!userForm.valid">
+          <i class="fa fa-close"></i> Save &amp; Close
+        </button>
+        <button class="btn btn-sm btn-warning" (click)="closeForm()">
+          <i class="fa fa-remove"></i> Cancel &amp; Return to List
+        </button>
+      </div>
+    </fieldset>
+    <div class="alert alert-warning" *ngIf="userForm.touched">
+      Form has been changed. Please save.
+    </div>
+    <div class="alert alert-success" *ngIf="saveResult">
+      Form has been saved.
+    </div>
+  </form>
 </div>
