--- a/src/demo/Client/App/Components/editor/delete.html
+++ b/src/demo/Client/App/Components/editor/delete.html
@@ -1,6 +1,14 @@
 <div class="alert alert-info">
-  <h3>Delete User</h3>
-  <div class="alert alert-warning">
-    Confirm deleting the selected user.
-  </div>
+	<h3>Delete User</h3>
+	<div class="alert alert-warning">
+		Confirm deleting the user {{ user.userName }}.
+	</div>
+	<div class="row">
+		<button class="btn btn-sm btn-success" type="button"  (click)="deleteItem()">
+          <i class="fa fa-save"></i> Delete
+        </button>
+		<button class="btn btn-sm btn-warning" (click)="closeForm()">
+          <i class="fa fa-remove"></i> Cancel &amp; Return to List
+        </button>
+	</div>
 </div>
