--- a/src/demo/Client/App/Components/editor/delete.html
+++ b/src/demo/Client/App/Components/editor/delete.html
@@ -4,10 +4,10 @@
 		Confirm deleting the user {{ user.userName }}.
 	</div>
 	<div class="row">
-		<button class="btn btn-sm btn-success" type="button"  (click)="deleteItem()">
+		<button class="btn btn-sm btn-success" type="button" (click)="deleteItem()">
           <i class="fa fa-save"></i> Delete
         </button>
-		<button class="btn btn-sm btn-warning" (click)="closeForm()">
+		<button class="btn btn-sm btn-warning" type="button" (click)="closeForm()">
           <i class="fa fa-remove"></i> Cancel &amp; Return to List
         </button>
 	</div>
