--- a/src/demo/Client/App/Components/editor/new.html
+++ b/src/demo/Client/App/Components/editor/new.html
@@ -9,7 +9,7 @@
         <button class="btn btn-sm btn-success" type="submit" [disabled]="!userForm.valid">
           <i class="fa fa-save"></i> Save
         </button>
-        <button class="btn btn-sm btn-warning" (click)="closeForm()">
+        <button class="btn btn-sm btn-warning" type="button" (click)="closeForm()">
           <i class="fa fa-remove"></i> Cancel &amp; Return to List
         </button>
       </div>
