--- a/src/demo/Client/App/Components/editor/edit.html
+++ b/src/demo/Client/App/Components/editor/edit.html
@@ -12,7 +12,7 @@
         <button class="btn btn-sm btn-secondary" type="submit" [disabled]="!userForm.valid">
           <i class="fa fa-close"></i> Save &amp; Close
         </button>
-        <button class="btn btn-sm btn-warning" (click)="closeForm()">
+        <button class="btn btn-sm btn-warning" type="button" (click)="closeForm()">
           <i class="fa fa-remove"></i> Cancel &amp; Return to List
         </button>
       </div>
