--- a/src/demo/Client/App/Components/editor/list.html
+++ b/src/demo/Client/App/Components/editor/list.html
@@ -44,11 +44,11 @@
         <tr *ngFor="let user of users.itemsOnCurrentPage">
           <td *ngFor="let data of users.columnsOfItem(user)">{{ data }}</td>
           <td>
-            <button class="btn btn-primary btn-sm"
+            <button class="btn btn-primary btn-sm" type="button"
                     (click)="editUser(user)">
               Edit
             </button>
-            <button class="btn btn-danger btn-sm"
+            <button class="btn btn-danger btn-sm" type="button"
                     (click)="removeUser(user)">
               Delete
             </button>
