--- a/src/demo/Client/App/Components/app-dashboard.html
+++ b/src/demo/Client/App/Components/app-dashboard.html
@@ -1,14 +1,11 @@
 ﻿<div class="row">
 	<div class="col-lg-6 col-md-6">
-		<div class="card card-inverse card-success">
-			<div class="card-block bg-success">
-				<div class="rotate">
-					<i class="fa fa-user fa-5x"></i>
-				</div>
-				<h6 class="text-uppercase">Tiles</h6>
-				<h1 class="display-1">123</h1>
-			</div>
-		</div>
+		<ac-infobox icon="fa-user" 
+		            text="Widgets" 
+					number="6"
+					footerText="Show all widgets"
+					footerLink="['/widgets/list']"
+					color="Info"></ac-infobox>
 	</div>
 	<div class="col-lg-6 col-md-6">
 		<div class="card card-inverse card-danger">
