--- a/src/demo/Client/App/Components/editor/edit.html
+++ b/src/demo/Client/App/Components/editor/edit.html
@@ -5,6 +5,7 @@
       <ac-editor [userForm]="userForm" [name]="'userName'" ></ac-editor>
       <ac-editor [userForm]="userForm" [name]="'email'" ></ac-editor>
       <ac-editor [userForm]="userForm" [name]="'phoneNumber'" ></ac-editor>
+      <ac-editor [userForm]="userForm" [name]="'age'" ></ac-editor>
       <div class="row">
         <button class="btn btn-sm btn-success" type="submit" [disabled]="!userForm.valid">
           <i class="fa fa-save"></i> Save
