--- a/src/demo/Client/App/Components/widgets/analogclock.html
+++ b/src/demo/Client/App/Components/widgets/analogclock.html
@@ -5,6 +5,6 @@
 	<h6 class="text-uppercase">Analog Clock</h6>
 	<h1 class="display-1">Use like this</h1>
 	<pre>
-		&lt;c-analogclock>&lt;/ac-analogclock>
+		&lt;ac-analogclock>&lt;/ac-analogclock>
 	</pre>
 </div>
