--- a/src/demo/Client/App/Components/widgets/analogclock.html
+++ b/src/demo/Client/App/Components/widgets/analogclock.html
@@ -2,8 +2,8 @@
 	<ac-analogclock></ac-analogclock>
 </div>
 <div class="col-lg-6 col-md-6">
-	<h6 class="text-uppercase">Analog Clock</h6>
-	<h1 class="display-1">Use like this</h1>
+	<h4 class="text-uppercase">Analog Clock</h4>
+	<h6>Use like this</h6>
 	<pre>
 		&lt;ac-analogclock>&lt;/ac-analogclock>
 	</pre>
