--- a/src/demo/Client/App/Components/widgets/loadericon.html
+++ b/src/demo/Client/App/Components/widgets/loadericon.html
@@ -1,13 +1,23 @@
 ﻿<div class="col-lg-6 col-md-6">
-	<ac-loadericon rotateSpeed="0.5s"></ac-loadericon>
-	<ac-loadericon rotateSpeed="1s" color="#00FF00"></ac-loadericon>
-	<ac-loadericon rotateSpeed="2s" color="#0000FF"></ac-loadericon>
-	<ac-loadericon rotateSpeed="5s"></ac-loadericon>
+	0.5:
+	<ac-loadericon rotateSpeed="0.5"></ac-loadericon>
+	<br>
+	1:
+	<ac-loadericon rotateSpeed="1" color="#00FF00"></ac-loadericon>
+	<br>
+	2:
+	<ac-loadericon rotateSpeed="2" color="#0000FF"></ac-loadericon>
+	<br>
+	5:
+	<ac-loadericon rotateSpeed="5"></ac-loadericon>
+	<br>
+	10:
+	<ac-loadericon rotateSpeed="5" color="brown"></ac-loadericon>
 </div>
 <div class="col-lg-6 col-md-6">
-	<h6 class="text-uppercase">Loader Icon</h6>
-	<h1 class="display-1">Use like this</h1>
+	<h4 class="text-uppercase">Loader Icon</h4>
+	<h6>Use like this</h6>
 	<pre>
-		&lt;ac-loadericon>&lt;/ac-loadericon>
+		&lt;ac-loadericon rotateSpeed="3" color="#00FF00">&lt;/ac-loadericon>
 	</pre>
 </div>
