--- a/src/demo/Client/App/Components/widgets/loadericon.html
+++ b/src/demo/Client/App/Components/widgets/loadericon.html
@@ -1,18 +1,18 @@
 ﻿<div class="col-lg-6 col-md-6">
-	0.5:
+	rotateSpeed = 0.5:
 	<ac-loadericon rotateSpeed="0.5"></ac-loadericon>
 	<br>
-	1:
+	rotateSpeed = 1:
 	<ac-loadericon rotateSpeed="1" color="#00FF00"></ac-loadericon>
 	<br>
-	2:
+	rotateSpeed = 2:
 	<ac-loadericon rotateSpeed="2" color="#0000FF"></ac-loadericon>
 	<br>
-	5:
+	rotateSpeed = 5:
 	<ac-loadericon rotateSpeed="5"></ac-loadericon>
 	<br>
-	10:
-	<ac-loadericon rotateSpeed="5" color="brown"></ac-loadericon>
+	rotateSpeed = 10:
+	<ac-loadericon rotateSpeed="10" color="brown"></ac-loadericon>
 </div>
 <div class="col-lg-6 col-md-6">
 	<h4 class="text-uppercase">Loader Icon</h4>
