--- a/src/demo/Client/Views/index.html
+++ b/src/demo/Client/Views/index.html
@@ -4,8 +4,8 @@
   <base href="/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Joerg <isageek> Krause (c) 2017"
-  <title>SVOGV Demo Application</title>
+  <meta name="author" content="Joerg <isageek> Krause (c) 2017" />
+  <title>SVOGV Showcase</title>
   <link rel="stylesheet" href="/assets/css/site.css" />
   <link rel="stylesheet" href="/assets/css/font-awesome.css">
 </head>
