--- a/src/demo/Client/Views/index.html
+++ b/src/demo/Client/Views/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/assets/css/font-awesome.css">
 </head>
 <body>
-  <!-- Root Component of CaevMan App -->
+  <!-- Root Component of SVOGV App -->
   <site-root></site-root>
   <!-- Design (Bootstrap 4) -->
   <script src="/assets/js/lib/jquery.js"></script>
