--- a/src/demo/Client/App/Components/editor/edit.html
+++ b/src/demo/Client/App/Components/editor/edit.html
@@ -21,4 +21,65 @@
       </div>
     </fieldset>
   </form>
+  <div class="card card-block card-success card-inverse">
+    <div class="card-header">
+      Techniques used
+    </div>    
+    <div class="card-body">
+      <p>This form makes use of the &lt;ac-editor&gt; component.</p>
+<pre>
+ &lt;form (ngSubmit)="saveUser()" [formGroup]="userForm" role="form" class="row">
+    &lt;fieldset>
+      &lt;legend>Edit current user&lt;/legend>
+      &lt;ac-editor [userForm]="userForm" [name]="'userName'" >&lt;/ac-editor>
+      &lt;ac-editor [userForm]="userForm" [name]="'email'" >&lt;/ac-editor>
+      &lt;ac-editor [userForm]="userForm" [name]="'phoneNumber'" >&lt;/ac-editor>
+      &lt;ac-editor [userForm]="userForm" [name]="'age'" >&lt;/ac-editor>
+      &lt;ac-editor [userForm]="userForm" [name]="'passWord'" >&lt;/ac-editor>
+      &lt;ac-editor [userForm]="userForm" [name]="'passWordTwo'" >&lt;/ac-editor>
+</pre>
+    <p>
+      The form needs a name, here we used 'userForm'. The editor gets a reference to that name using the property [userForm]. The [name] property is bound to the properties of the view model.
+      The view model needs the decorators to figure out what editor must be shown. It also pulls the validation information from the model. The model used on this form looks like this:  
+    </p>
+<pre>
+export class UserViewModel {
+
+  @Hidden()
+  id: number = 0;
+
+  @Display('E-Mail', 'E-Mail address')
+  @Required()
+  @MaxLength(100)
+  @Email()
+  email: string = '';
+
+  @Display('Phone Number', 'The user\'s phone')
+  @Required()
+  @MaxLength(20)
+  phoneNumber: string = '';
+
+  @Display('User Name', 'The full name')
+  @Required()
+  @MaxLength(100)
+  userName: string = '';
+
+  @Display('Age', 'From 12 to 88')
+  @Range(12, 88)
+  age = 14;
+
+  @Display('Password')
+  @Required()
+  @Compare('passWordTwo')
+  passWord: string = '';
+
+  @Display('Password')
+  @Required()
+  passWordTwo: string = '';
+
+}
+ 
+</pre>
+    </div>
+  </div>
 </div>
