added templatehitn for more editor templates

--- a/src/demo/Client/App/Components/editor/edit-autoform.html
+++ b/src/demo/Client/App/Components/editor/edit-autoform.html
@@ -2,6 +2,7 @@
   <form (ngSubmit)="saveUser()" [formGroup]="userForm" role="form" class="row" autoform>
     <fieldset>
       <legend>Edit current user</legend>
+      <ac-autoform [formGroup]="userForm"></ac-autoform> 
       <div class="row">
         <button class="btn btn-sm btn-success" type="submit" [disabled]="!userForm.valid">
           <i class="fa fa-save"></i> Save
