--- a/src/demo/Client/App/Components/editor/list.html
+++ b/src/demo/Client/App/Components/editor/list.html
@@ -3,22 +3,19 @@
     <div class="form-inline">
       <div class="form-group" *ngIf="users">
         <label class="" for="searchUsers">Search Users</label>
-        <input type="text" id="searchUsers" class="form-control" title="Search"
-               [(ngModel)]="users.searchValue.userName" />
+        <input type="text" id="searchUsers" class="form-control" title="Search" [(ngModel)]="users.searchValue.userName" />
       </div>
       <div class="form-group">
-        <button class="btn btn-success"
-                (click)="addUser()">
+        <button class="btn btn-success" (click)="addUser()">
           Create New User
         </button>
       </div>
       <div class="form-group pull-right" *ngIf="users">
         <label for="pageSize">Items per Page</label>
-        <select class="form-control" name="pageSize"
-                [(ngModel)]="users.pageSize">
+        <select class="form-control" name="pageSize" [(ngModel)]="users.pageSize">
+          <option [ngValue]="2">2</option>
           <option [ngValue]="5">5</option>
           <option [ngValue]="10">10</option>
-          <option [ngValue]="20">20</option>
         </select>
       </div>
     </div>
@@ -29,7 +26,10 @@
     <table class="table table-condensed">
       <thead>
         <tr>
-          <th *ngFor="let header of users.headers" [title]="header.desc">{{ header.text }}</th>
+          <th *ngFor="let header of users.headers" [title]="header.desc">{{ header.text }}
+              <button class="btn btn-sm btn-secondary" (click)="users.sortColumn(header.prop, 'asc')"><i class="fa fa-sort-asc"></i></button>
+              <button class="btn btn-sm btn-secondary" (click)="users.sortColumn(header.prop, 'desc')"><i class="fa fa-sort-asc"></i></button>
+          </th>
           <th>Action</th>
         </tr>
       </thead>
@@ -46,15 +46,10 @@
             {{ data }}
           </td>
           <td>
-            <button class="btn btn-sm btn-primary" (click)="showModal(user)">&hellip;</button>
-          </td>
-          <td>
-            <button class="btn btn-primary btn-sm" type="button"
-                    (click)="editUser(user)">
+            <button class="btn btn-primary btn-sm" type="button" (click)="editUser(user)">
               Edit
             </button>
-            <button class="btn btn-danger btn-sm" type="button"
-                    (click)="removeUser(user)">
+            <button class="btn btn-danger btn-sm" type="button" (click)="removeUser(user)">
               Delete
             </button>
           </td>
@@ -64,11 +59,36 @@
   </div>
 </div>
 
-<ac-pagination *ngIf="users"
-               [maxPageIndex]="users.maxPageIndex"
-               (pageNumberChanged)="users.currentPageIndex = $event">
+<ac-pagination *ngIf="users" [maxPageIndex]="users.maxPageIndex" (pageNumberChanged)="users.currentPageIndex = $event">
 </ac-pagination>
 
 <div *ngIf="currentUser">
   <h1>Modaler Dialog für {{currentUser.userName}}</h1>
+</div>
+
+<div class="card card-block">
+  <div class="card-header card-success">
+    Techniques used
+  </div>
+  <div class="card-body">
+    <p>The table is plain HTML. The tricky part is the datamodel, that holds an array of view models. This model class is able to 
+      sort, filter, page, and so on.</p>
+      <code><pre>
+ngOnInit() {{ '{' }}
+  // Here we load some data from a service
+  this.apiService.getUsers().subscribe(data => {
+    this.renderData(data);
+  });
+}
+
+private renderData(data: Array<UserViewModel>) {{ '{' }}
+  // typeInfo is an artifical instance to get access to the meta data JavaScript cannot provide through type info alone
+  var t = new UserViewModel();
+  // we get a regular array here, but grid expects GridData for proper rendering
+  this.users = new AcDataGridModel<UserViewModel>(data, t);
+}
+
+        </pre></code> 
+        <p>Now, in <code>this.users</code> of type <code>AcDataGridModel</code> is the model we can use to create a grid. 
+  </div>
 </div>
