--- a/src/demo/Client/App/Components/editor/list.html
+++ b/src/demo/Client/App/Components/editor/list.html
@@ -89,6 +89,6 @@ private renderData(data: Array<UserViewModel>) {{ '{' }}
 }
 
         </pre></code> 
-        <p>Now, in <code>this.users</code> of type <code>AcDataGridModel</code> is the model we can use to create a grid. 
+        <p>Now, in <code>this.users</code> of type <code>AcDataGridModel</code> is the model we can use to create a grid. </p>
   </div>
 </div>
