--- a/src/demo/Client/App/Components/app-dashboard.html
+++ b/src/demo/Client/App/Components/app-dashboard.html
@@ -8,6 +8,9 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-offset-md-4 col-md-6">
+	<div class="col-lg-6 col-md-6">
+		<ac-infobox icon="fa-space-shuttle" text="HUD" number="6" footerText="HUD Dashboard" footerLink="['/huddashboard']" color="Success"></ac-infobox>
+	</div>
+	<div class="col-lg-6 col-md-6">
 	</div>
 </div>
