--- a/src/demo/Client/App/Components/hud/hud-dashboard.html
+++ b/src/demo/Client/App/Components/hud/hud-dashboard.html
@@ -1,3 +1,10 @@
-﻿<div class="row">
-	<hud-clock></hud-clock>
+﻿<div class="row" id="hudDemo">
+	<div class="col-md-6">
+		<hud-clock #hudClock></hud-clock>
+	</div>
+	<div class="col-md-6" *ngIf="hudClock.config">
+		<form [formGroup]="configForm" novalidate>
+			20&nbsp;<ac-editor type="range" [userForm]="configForm" name="starCount" fromValue="20" toValue="500" ([value])="hudClock.config.starCount"></ac-editor>&nbsp;500
+		</form>
+	</div>
 </div>
