--- a/src/demo/Client/App/Components/editor/list.html
+++ b/src/demo/Client/App/Components/editor/list.html
@@ -49,7 +49,10 @@
           </td>
           <td>
             <button class="btn btn-primary btn-sm" type="button" (click)="editUser(user)">
-              Edit
+              Regular Form Edit
+            </button>
+            <button class="btn btn-primary btn-sm" type="button" (click)="editUser(user)">
+              Auto Form Edit
             </button>
             <button class="btn btn-danger btn-sm" type="button" (click)="removeUser(user)">
               Delete
