Forms and demo fixes

--- a/src/demo/Client/App/Components/editor/list.html
+++ b/src/demo/Client/App/Components/editor/list.html
@@ -51,7 +51,7 @@
             <button class="btn btn-primary btn-sm" type="button" (click)="editUser(user)">
               Regular Form Edit
             </button>
-            <button class="btn btn-primary btn-sm" type="button" (click)="editUser(user)">
+            <button class="btn btn-primary btn-sm" type="button" (click)="editUserAutoform(user)">
               Auto Form Edit
             </button>
             <button class="btn btn-danger btn-sm" type="button" (click)="removeUser(user)">
