--- a/src/demo/Client/Views/index.html
+++ b/src/demo/Client/Views/index.html
@@ -21,6 +21,8 @@
   <script src="/assets/js/lib/zone.js"></script>
   <script src="/assets/js/lib/reflect.js"></script>
   <script src="/assets/js/lib/system.js"></script>
+  <!-- Only for experimental clock, remove in production --> 
+  <script src="/assets/js/lib/smil/index.js"></script>
   <!-- Dynamic Loader -->
   <script src="/assets/js/systemjs.config.js"></script>
   <script>
