Moved from bower to npm for frontend.

--- a/src/demo/Client/Styles/site.scss
+++ b/src/demo/Client/Styles/site.scss
@@ -1,7 +1,4 @@
-﻿@import "../../bower_components/bootstrap/scss/bootstrap.scss";
-@import "../../bower_components/tether/src/css/tether.sass";
-
-body {
+﻿body {
   padding-top:62px;
 }
 
