--- a/src/demo/Client/Views/index.html
+++ b/src/demo/Client/Views/index.html
@@ -16,8 +16,8 @@
   <script src="/assets/js/lib/jquery.js"></script>
   <script src="/assets/js/lib/tether.js"></script>
   <script src="/assets/js/lib/bootstrap.js"></script>
-  <!-- PolyFills -->
-  <script src="/assets/js/lib/shim.js"></script>
+  <!-- PolyFills (including all browsers) -->
+  <script src="/assets/js/lib/core.js"></script>
   <script src="/assets/js/lib/zone.js"></script>
   <script src="/assets/js/lib/reflect.js"></script>
   <script src="/assets/js/lib/system.js"></script>
