moved to bootstrap-alpha-6

--- a/src/demo/Client/Styles/site.scss
+++ b/src/demo/Client/Styles/site.scss
@@ -1,6 +1,5 @@
-﻿body {
-  padding-top:62px;
-}
+﻿@import '../../node_modules/bootstrap/scss/bootstrap';
+@import '../../node_modules/tether/src/css/tether';
 
 body, html {
   height:100%;
