--- a/src/demo/Client/Views/index.html
+++ b/src/demo/Client/Views/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Joerg <isageek> Krause (c) 2017" />
   <title>SVOGV Showcase</title>
+  <!-- This is private style, bootstrap and tether build from scss -->
   <link rel="stylesheet" href="/assets/css/site.css" />
   <link rel="stylesheet" href="/assets/css/font-awesome.css">
 </head>
