Fixes in demo for BT 4-alpha.6

--- a/src/demo/Client/App/Components/editor/edit-autoform.html
+++ b/src/demo/Client/App/Components/editor/edit-autoform.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <form (ngSubmit)="saveUser()" [formGroup]="userForm" role="form" class="row" autoform>
-    <fieldset>
+    <fieldset style="width:100%">
       <legend>Edit current user</legend>
       <ac-autoform [formGroup]="userForm"></ac-autoform> 
       <div class="row">
