--- a/src/demo/Client/App/Components/editor/list.html
+++ b/src/demo/Client/App/Components/editor/list.html
@@ -1,28 +1,23 @@
 <div class="row">
-  <div class="col-xs-12">
-    <div class="form-inline">
+  <div class="col-md-12">
+    <form role="search" class="form-inline col-md-6">
       <div class="form-group" *ngIf="users">
-        <label class="" for="searchUsers">Search Users</label>
-        <input type="text" id="searchUsers" class="form-control" title="Search" [(ngModel)]="users.searchValue.userName" />
+        <label class="" for="searchUsers">Search Users </label>
+        <input type="text" id="searchUsers" class="form-control" title="Search" name="searchItem" [(ngModel)]="users.searchValue.userName"
+        />
       </div>
+    </form>
+    <div role="navigation" class="pull-md-right col-md-6">
       <div class="form-group">
         <button class="btn btn-success" (click)="addUser()">
-          Create New User
-        </button>
-      </div>
-      <div class="form-group pull-right" *ngIf="users">
-        <label for="pageSize">Items per Page</label>
-        <select class="form-control" name="pageSize" [(ngModel)]="users.pageSize">
-          <option [ngValue]="2">2</option>
-          <option [ngValue]="5">5</option>
-          <option [ngValue]="10">10</option>
-        </select>
+        Create New User
+      </button>
       </div>
     </div>
   </div>
 </div>
 <div class="row" *ngIf="users">
-  <div class="col-xs-12">
+  <div class="col-md-12">
     <table class="table table-condensed">
       <thead>
         <tr>
@@ -63,22 +58,28 @@
     </table>
   </div>
 </div>
-
-<ac-pagination *ngIf="users" [maxPageIndex]="users.maxPageIndex" (pageNumberChanged)="users.currentPageIndex = $event">
-</ac-pagination>
-
-<div *ngIf="currentUser">
-  <h1>Modaler Dialog für {{currentUser.userName}}</h1>
+<div class="clearfix">
+  <form class="form-inline">
+    <div class="form-group" *ngIf="users">
+      <label for="pageSize">Items per Page</label>
+      <select class="form-control" name="pageSize" [(ngModel)]="users.pageSize" name="itemsPerPage">
+        <option [ngValue]="2">2</option>
+        <option [ngValue]="5">5</option>
+        <option [ngValue]="10">10</option>
+      </select>
+    </div>
+    <ac-pagination *ngIf="users" [maxPageIndex]="users.maxPageIndex" (pageNumberChanged)="users.currentPageIndex = $event">
+    </ac-pagination>
+  </form>
 </div>
-
-<div class="card card-block">
+<div class="card card-block clearfix">
   <div class="card-header card-success">
     Techniques used
   </div>
   <div class="card-body">
-    <p>The table is plain HTML. The tricky part is the datamodel, that holds an array of view models. This model class is able to 
-      sort, filter, page, and so on.</p>
-      <code>
+    <p>The table is plain HTML. The tricky part is the datamodel, that holds an array of view models. This model class is able
+      to sort, filter, page, and so on.</p>
+    <code>
         <pre>
 ngOnInit() {{ '{' }}
   // Here we load some data from a service
@@ -94,7 +95,7 @@ private renderData(data: Array&lt;UserViewModel>) {{ '{' }}
   this.users = new AcDataGridModel&lt;UserViewModel>(data, t);
 }
 
-        </pre></code> 
-        <p>Now, in <code>this.users</code> of type <code>AcDataGridModel</code> is the model we can use to create a grid. </p>
+        </pre></code>
+    <p>Now, in <code>this.users</code> of type <code>AcDataGridModel</code> is the model we can use to create a grid. </p>
   </div>
 </div>
