--- a/src/demo/Client/App/Components/editor/new.html
+++ b/src/demo/Client/App/Components/editor/new.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <form (ngSubmit)="saveUser()" [formGroup]="userForm" role="form" class="row">
-    <fieldset>
+    <fieldset style="width:100%">
       <legend>Add new User</legend>
       <ac-editor [userForm]="userForm" [name]="'userName'" ></ac-editor>
       <ac-editor [userForm]="userForm" [name]="'email'" ></ac-editor>
