--- a/src/demo/Client/App/Components/editor/list.html
+++ b/src/demo/Client/App/Components/editor/list.html
@@ -23,10 +23,10 @@
         <tr>
           <th *ngFor="let header of users.headers" [title]="header.desc">{{ header.text }}
             <div class="ac-sortsmall">
-              <button class="btn btn-sm btn-secondary ac-supersmall" (click)="users.sortColumn(header.prop, 'asc')"><i class="fa fa-sort-asc"></i></button>
-              <button class="btn btn-sm btn-secondary ac-supersmall" (click)="users.sortColumn(header.prop, 'desc')"><i class="fa fa-sort-desc"></i></button>
+              <button class="btn btn-sm ac-supersmall" (click)="users.sortColumn(header.prop, 'asc')"><i class="fa fa-sort-asc"></i></button>
+              <button class="btn btn-sm ac-supersmall" (click)="users.sortColumn(header.prop, 'desc')"><i class="fa fa-sort-desc"></i></button>
             </div>
-            <button (click)="removeColumn(header.prop)">Remove</button>
+            <button (click)="removeColumn(header.prop)" class="btn btn-sm btn-warning">Remove Column</button>
           </th>
           <th>Action</th>
         </tr>
