--- a/src/demo/Client/App/Components/widgets/list.html
+++ b/src/demo/Client/App/Components/widgets/list.html
@@ -1,22 +1,12 @@
-<div class="row">
-	<div class="col-xs-12">
-		<div class="alert alert-info">
-			This is the components (widgets) demo page. The dropdowns below is the dropdown menu component, <code>&lt;ac-dropdown&gt;</code>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="alert alert-info">
+				This is the components (widgets) demo page. The widgets here complement the grid. These widgets are not fully blown components
+				but instad show the effort to create highly customized stuff. Some parts require Bootstrap 4 and hence do not work in
+				other environments properly. However, it's not about adding Bootstrap aware Angular stuff, this has been done already
+				by others.
+			</div>
 		</div>
-		<fieldset>
-			<legend>Available Widgets</legend>
-			<div class="col-xs-10 col-md-3 col-lg-2">
-				<label for="formWidgets">Form Widgets:</label>
-			</div>
-			<div class="col-xs-12 col-md-8 col-lg-4">
-				<ac-dropmenu [menu]="formWidgets" [hasSplitBtn]="false" text="Select Form Widgets" id="formWidgets"></ac-dropmenu>
-			</div>
-			<div class="col-xs-10 col-md-3 col-lg-2">
-				<label for="svgComponents">SVG Components:</label>
-			</div>
-			<div class="col-xs-12 col-md-8 col-lg-5">
-				<ac-dropmenu [menu]="svgComponents" [hasSplitBtn]="false" text="Select SVG Components" id="svgComponents"></ac-dropmenu>
-			</div>
-		</fieldset>
 	</div>
 </div>
